2009-12-25 Shougo Matsushita
    * Fixed Makefile.
    * Newline convert.
    * vimproc#system supported input.
    * Implemented vimproc#get_last_status() instead of v:shell_error.
    

2009-12-22 Shougo Matsushita
    * Implemented Windows pty.
    * Supported MinGW.
    

2009-12-17 Shougo Matsushita
    * Reimplemented vimproc.vim.
    * Changed tests.
    

2009-11-11 Shougo Matsushita
    * Resolve shortcut filename.
    

2009-11-06 Shougo Matsushita
    * Fixed command search bug on Windows.
    

2009-09-09 Shougo Matsushita
    * Mark as ver.1.22.
    * Use forkpty().
    
    * Modified for Mac OS X(Thanks Nico!).

2009-07-09 Shougo Matsushita
    * Mark as ver.1.21.
    
    * Fixed pty_open() bug in Linux.

2009-07-08 Shougo Matsushita
    * Mark as ver.1.20.
    
    * Modified for Mac OS X(Thanks splhack!).